--- a/app/src/main/res/layout/activity_mi_grupo_familiar.xml
+++ b/app/src/main/res/layout/activity_mi_grupo_familiar.xml
@@ -44,8 +44,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="2dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnVolver"
+        app:layout_constraintBottom_toTopOf="@+id/btnRecompensasXFamilia"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
@@ -71,4 +70,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgFamilia" />
+
+    <Button
+        android:id="@+id/btnRecompensasXFamilia"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="RECOMPENSAS"
+        app:layout_constraintBottom_toTopOf="@+id/btnVolver"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
