--- a/app/src/main/res/layout/activity_actividad.xml
+++ b/app/src/main/res/layout/activity_actividad.xml
@@ -142,7 +142,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/btnRecompensas"
+        android:id="@+id/btnHistorial"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="recompensas"
